# uni-app

./: README.md  pyproject.toml
data/: BTC_prices.csv  CRV_prices.csv  ETH_prices.csv  LDO_prices.csv  vol_with_usd_with_fee_eth_btc.csv  vol_with_usd_with_fee_eth_crv.csv  vol_with_usd_with_fee_eth_ldo.csv
uniswap_trading/: app.py  binance.py  fees.py  graph.py  historical_simulation.py  plots.py  price_simulation.py  produce_fees.py  simulation.py  simulation_historical.py  strategy.py  uniswap.py  visualizations.py
