[tool.poetry]
name = "uniswap-trading"
version = "0.1.0"
description = ""
authors = ["Andrey <ewkjf@mail.ru>"]
readme = "README.md"

[tool.poetry.scripts]
uniswap-sim = "app:main"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.44.1"
pandas = "^2.2.3"
plotly = "^6.0.1"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
